styles.css
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    list-style: none;
    text-decoration: none;
}
body {
    position: relative;
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    min-width: 100vw;
}
  
.logo {
    position: absolute;
    width: 36px;
    height: 30px;
    margin-top: 15px;
    margin-left: 15px;
}

video {
    width: 100vw;
    height: 100vh;
    object-fit: cover;
    position: fixed;
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
    z-index: -1;
  }

.vets {
    padding-top: 370px;
    padding-left: 347px;
    width: 40vw;
    
}

.buttons {
    margin-top: 68px;
    margin-left: 224px;
    display: flex; 
    justify-content: space-between; 
    gap: 31px;
    max-width: 40vw;
}

.button {
    background-color: #000000;
    color: #ffc74c;
    border: none;
    border-radius: 2px;
    border-color: #000000;
    font-size: 14px;
    margin-left: 31px;
    width: 178px;
    height: 41px;

}

a:link {
    color: #ffc74c;;
}

a:hover {
    color: hotpink;
}

a:visited {
    color: #ffc74c;
}

a:active {
    color: rgb(0, 204, 255);
}
.section2 {
    width: 100vh;
    height: 50%;
    z-index: 0;
    display: flex;
    
}
.soldiers {
    width: 100%;
    position: absolute;
    z-index: 0;
}

.mision {
    margin-left: auto;
    margin-right: 0px;
    z-index: 1;
    display: flex;
    justify-content: flex-end;
    position: relative;
    z-index: 999;
    top: 0;
    max-width: 600px;
    max-height: 30px;
    margin-right: 70px;

}
.vision {
    margin-left: auto;
    margin-right: 0px;
    z-index: 1;
    display: flex;
    justify-content: flex-end;
    position: relative;
    z-index: 999;
    top: 0;
    max-height: 50px;
    
}
.h1mision {
    margin-left: 78%;
    margin-right: 70px;
    padding-top: 572px;
    padding-right: 70px;
    text-align: right;
    color: #ffc74c;
    font-size: 45px;
    position: relative;
    z-index: 999;
    float: right;
}
.pmision {
    margin-right: 70px;
    margin-left: 78%;
    padding-top: 25px;
    padding-right: 70px;
    text-align: right;
    color: #ffffff;
    font-size: 14px;
    position: relative;
    float: right;
    z-index: 999;
    max-width: 600px;
}
.h1vision {
    margin-left: 78%;
    margin-right: 70px;
    margin-top: 73px;
    padding-top: 73px;
    padding-right: 70px;
    text-align: right;
    color: #ffc74c;
    font-size: 45px;
    position: relative;
    float: right;
}
.pvision {
    margin-left: 78%;
    margin-right: 70px;
    padding-top: 25px;
    padding-right: 70px;
    text-align: right;
    color: #ffffff;
    font-size: 14px;
    position: relative;
    float: right;
    max-width: 800px;
}
.footer {
        margin-top: auto;
        width: 100%;
        height: 2.5rem;
        display: flex;
        position: absolute;
        bottom: 5px;
        left: 0;
        right: 70px;    
        flex: 0;    
        padding: center;
}
.logo2 {
    height: 30px;
    padding-left: 70px;
    padding-bottom: 75px;
    display: block;
}
.copyright {
    position: relative;
    color: #ffc74c;
    text-align: center;
    padding-bottom: 8px;
    margin-bottom: 5px;
    margin-left: 827px;
}

.links {
    flex-wrap: wrap;
    width: 36px;
    height: 30px;
    max-width: 36px;
    max-height: 30px;
    padding-bottom: 79px;
    gap: 38px;
    padding-right: 70px;
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: right;
    padding-bottom: 0; 
    margin-right: 70px;
}

